--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="left_side">
 			<div class="profileText">
 				<div class="imgBx">
-					<img src="">
+					<img src="image.jpg">
 				</div>
 				<h2>Armand Houpin</h2>
 			</div>
