--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 				<ul>
 					<li> <i class="fa fa-gamepad" aria-hidden="true"></i> Gaming</li>
 					<li> <i class="fa fa-plus-circle" aria-hidden="true"></i> Badminton</li>
-					<li> <i class="fa fa-code" aria-hidden="true"></i> Codage / Développement</li>
+					<li> <i class="fa fa-code" aria-hidden="true"></i> Développement</li>
 				</ul>
 		</div>
 
