--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+	<script src="https://kit.fontawesome.com/64d58efce2.js" crossorigin="anonymous"></script>
 	<title>CV Armand HOUPIN</title>
 	<link rel="stylesheet" type="text/css" href="cv.css">
 </head>
 <body>
+	<div class="header">
+		<a href="../index.html"> <i class="fas fa-arrow-left"></i> Retour au site </a>
+	</div>
 	<div class="container">
 		<div class="left_side">
 			<div class="profileText">
